welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: value or is not a member of Boolean
  if (a<21 && a>9 && b>20 or b<10) {
                          ^max1020:8: error: value or is not a member of Boolean
  if (b<21 && b>9 && a>20 or a<10) {
                          ^